# BioInfoVerify

./: README.md
property_checking/: .gitignore  CMakeLists.txt  main.cpp
static_analysis/: Makefile  bntseq.c  branch-cov.py  bwa_test.c  bwt_gen.c  coverage.info  line-cov.py  random-test-cov.py.txt  random_test.c  rle.c  rope.c
static_analysis/cbmc/proofs/: Makefile-template-defines
static_analysis/cbmc/proofs/GenerateDNAOccCountTable/: GenerateDNAOccCountTable_harness.c  Makefile  README.md  cbmc-viewer.json
static_analysis/cbmc/proofs/bwa_gen_cigar2/: Makefile  README.md  bwa_gen_cigar2_harness.c  cbmc-viewer.json  prop.txt
static_analysis/cbmc/proofs/mp_destroy/: Makefile  README.md  cbmc-viewer.json  mp_destroy_harness.c
static_analysis/cbmc/proofs/rle_split/: Makefile  README.md  cbmc-viewer.json  rle_split_harness.c
static_analysis/coverage_report/: index-sort-f.html  index-sort-l.html  index.html
theorem_proving/: README.md  seedingAllignment.rkt  sequencing.rkt
